; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ehca/extr_ehca_irq.c_dispatch_port_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ehca/extr_ehca_irq.c_dispatch_port_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ehca_shca = type { i32 }
%struct.ib_event = type { i32, %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"port %d %s.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ehca_shca*, i32, i32, i8*)* @dispatch_port_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dispatch_port_event(%struct.ehca_shca* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.ehca_shca*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.ib_event, align 8
  store %struct.ehca_shca* %0, %struct.ehca_shca** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load %struct.ehca_shca*, %struct.ehca_shca** %5, align 8
  %11 = getelementptr inbounds %struct.ehca_shca, %struct.ehca_shca* %10, i32 0, i32 0
  %12 = load i32, i32* %6, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @ehca_info(i32* %11, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %12, i8* %13)
  %15 = load %struct.ehca_shca*, %struct.ehca_shca** %5, align 8
  %16 = getelementptr inbounds %struct.ehca_shca, %struct.ehca_shca* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.ib_event, %struct.ib_event* %9, i32 0, i32 2
  store i32* %16, i32** %17, align 8
  %18 = load i32, i32* %7, align 4
  %19 = getelementptr inbounds %struct.ib_event, %struct.ib_event* %9, i32 0, i32 0
  store i32 %18, i32* %19, align 8
  %20 = load i32, i32* %6, align 4
  %21 = getelementptr inbounds %struct.ib_event, %struct.ib_event* %9, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  %23 = call i32 @ib_dispatch_event(%struct.ib_event* %9)
  ret void
}

declare dso_local i32 @ehca_info(i32*, i8*, i32, i8*) #1

declare dso_local i32 @ib_dispatch_event(%struct.ib_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
